improving script to handle multiple conditions

--- a/python/toy_example.ipynb
+++ b/python/toy_example.ipynb
@@ -120,6 +120,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# def to_dense_matrix(S, mu: np.array) -> np.array:\n",
+    "#     Nc, Nr = S.shape\n",
+    "    \n",
+    "#     if mu.size == 0:\n",
+    "#         return np.zeros((Nc, Nr))\n",
+    "\n",
+    "#     assert mu.ndim == 1\n",
+    "#     K_mat = []\n",
+    "#     k = 0\n",
+    "#     for i in range(Nc):\n",
+    "#         row = []\n",
+    "#         for j in range(Nr):\n",
+    "#             if S[i, j] != 0:\n",
+    "#                 row.append(mu[k])\n",
+    "#                 k += 1\n",
+    "#             else:\n",
+    "#                 row.append(0)\n",
+    "#         K_mat.append(np.hstack(row))\n",
+    "#     K_mat = np.vstack(K_mat)\n",
+    "#     return K_mat\n",
+    "\n",
+    "# Km_gmean_full = to_dense_matrix(S, np.log(Km_gmean.m_as(\"M\")))\n",
+    "\n",
+    "# # use Haldane to find the k\n",
+    "# kcatr_gmean = np.exp(np.diag(S.T @ Km_gmean_full) + np.log(kcatf_gmean.m_as(\"1/s\")) - np.log(Keq_gmean)) * Q_(\"1/s\")\n",
+    "# kcatr_ln_cov = np.array(\n",
+    "#     [\n",
+    "#         [21.2, 0, 0],\n",
+    "#         [0, 21.2, 0],\n",
+    "#         [0, 0, 21.2],\n",
+    "#     ]\n",
+    "# ) # log-scale covariance\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# condition dependent data (columns represent conditions)\n",
     "\n",
     "fluxes = Q_(\n",
@@ -137,7 +177,7 @@
     "        [1e-3, 2e-3, 2e-3, 1e-3],\n",
     "    ], \"M\")  # geometric mean\n",
     "\n",
-    "conc_enz_gsigma = np.array(\n",
+    "conc_enz_gstd = np.array(\n",
     "    [\n",
     "        [10.0, 10.0, 10.0, 10.0],\n",
     "        [10.0, 10.0, 10.0, 10.0],\n",
@@ -153,81 +193,13 @@
     "    ], \"M\"\n",
     ")  # geometric mean\n",
     "\n",
-    "conc_met_gsigma = np.array(\n",
+    "conc_met_gstd = np.array(\n",
     "    [\n",
     "        [10.0, 10.0, 10.0, 10.0],\n",
     "        [10.0, 10.0, 10.0, 10.0],\n",
     "        [10.0, 10.0, 10.0, 10.0],\n",
     "    ]\n",
     ")  # geometric standard deviation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Metabolite concentrations =\n",
-      " [[3.46699630e-04 1.99857913e-03 4.89683215e-04 1.83832552e-03]\n",
-      " [5.08116691e-05 6.86626964e-05 4.06047465e-05 1.42004248e-04]\n",
-      " [6.73555838e-05 1.59069310e-04 5.34650337e-05 9.99953632e-06]]\n",
-      "\n",
-      "Enzyme concentrations =\n",
-      " [[0.00052205 0.00012086 0.00047957 0.00023156]\n",
-      " [0.01313218 0.01037386 0.02231131 0.00042771]\n",
-      " [0.00540642 0.0007897  0.00233501 0.00218516]]\n",
-      "\n",
-      "eta_thr =\n",
-      " [[0.99 1.   1.   1.  ]\n",
-      " [0.49 0.11 0.5  0.97]\n",
-      " [1.   1.   1.   1.  ]]\n",
-      "\n",
-      "eta_kin =\n",
-      " [[0.16 0.5  0.21 0.44]\n",
-      " [0.29 0.35 0.24 0.53]\n",
-      " [0.31 0.37 0.26 0.55]]\n",
-      "\n",
-      "eta_reg =\n",
-      " [[1.   1.   1.   1.  ]\n",
-      " [0.06 0.27 0.08 0.25]\n",
-      " [0.26 0.74 0.36 0.72]]\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "All Z-scores\n",
-      "--------------------------------------------------\n",
-      "enzymes =  3.43\n",
-      "metabolites =  3.26\n",
-      "ΔG'0 =  2.43\n",
-      "kcat forward =  1.95\n",
-      "kcat reverse =  1.89\n",
-      "Km =  2.04\n",
-      "Ka =  4.32\n",
-      "Ki =  0.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "model_balancing.solve(\n",
-    "    S,\n",
-    "    fluxes,\n",
-    "    A_act,\n",
-    "    A_inh,\n",
-    "    Keq_gmean, Keq_ln_cov,\n",
-    "    conc_enz_gmean, conc_enz_gsigma,\n",
-    "    conc_met_gmean, conc_met_gsigma,\n",
-    "    kcatf_gmean, kcatf_ln_cov,\n",
-    "    kcatr_gmean, kcatr_ln_cov,\n",
-    "    Km_gmean, Km_ln_cov,\n",
-    "    Ka_gmean, Ka_ln_cov,\n",
-    "    Ki_gmean, Ki_ln_cov\n",
-    ")"
    ]
   },
   {
@@ -240,27 +212,105 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Metabolite concentrations =\n",
-      " [[3.82310493e-04 1.44030577e-03 5.77065604e-04 1.49439693e-03]\n",
-      " [4.39118557e-05 7.84100304e-05 4.72655142e-05 1.50285989e-04]\n",
-      " [6.30997848e-05 1.76886973e-04 5.49302835e-05 9.99945188e-06]]\n",
+      "Metabolite concentrations (M) =\n",
+      " [[3.46812613e-04 1.99831443e-03 4.89547517e-04 1.83920507e-03]\n",
+      " [5.07859337e-05 6.87125502e-05 4.05883348e-05 1.42008688e-04]\n",
+      " [6.73102048e-05 1.59258278e-04 5.34581803e-05 9.99603775e-06]]\n",
       "\n",
-      "Enzyme concentrations =\n",
-      " [[0.00055745 0.00016419 0.00049865 0.00029889]\n",
-      " [0.01310194 0.0111281  0.01364479 0.00043879]\n",
-      " [0.00679382 0.0009446  0.00223394 0.00270082]]\n",
+      "Enzyme concentrations (M) =\n",
+      " [[0.00052168 0.00012085 0.00047948 0.00023144]\n",
+      " [0.01312676 0.01038445 0.022323   0.00042749]\n",
+      " [0.00540467 0.00078882 0.00233521 0.00218328]]\n",
       "\n",
-      "eta_thr =\n",
+      "Driving forces (RT) =\n",
+      " [[ 5.20565824  6.6546205   5.77449387  5.84569354]\n",
+      " [ 0.67934535  0.12044238  0.68561882  3.61473723]\n",
+      " [ 7.42654841  6.86764544  7.43282188 10.36194029]]\n",
+      "\n",
+      "η(thr) =\n",
+      " [[0.99 1.   1.   1.  ]\n",
+      " [0.49 0.11 0.5  0.97]\n",
+      " [1.   1.   1.   1.  ]]\n",
+      "\n",
+      "η(kin) =\n",
+      " [[0.16 0.5  0.21 0.44]\n",
+      " [0.29 0.35 0.24 0.53]\n",
+      " [0.31 0.37 0.26 0.55]]\n",
+      "\n",
+      "η(reg) =\n",
+      " [[1.   1.   1.   1.  ]\n",
+      " [0.06 0.27 0.08 0.25]\n",
+      " [0.26 0.74 0.36 0.72]]\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "All Z-scores\n",
+      "--------------------------------------------------\n",
+      "enzymes =  3.43\n",
+      "metabolites =  3.26\n",
+      "Keq =  2.43\n",
+      "kcat forward =  1.95\n",
+      "kcat reverse =  1.89\n",
+      "Km =  2.04\n",
+      "Ka =  4.31\n",
+      "Ki =  0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_balancing.solve(\n",
+    "    S,\n",
+    "    fluxes,\n",
+    "    A_act,\n",
+    "    A_inh,\n",
+    "    Keq_gmean, Keq_ln_cov,\n",
+    "    conc_enz_gmean, conc_enz_gstd,\n",
+    "    conc_met_gmean, conc_met_gstd,\n",
+    "    kcatf_gmean, kcatf_ln_cov,\n",
+    "    kcatr_gmean, kcatr_ln_cov,\n",
+    "    Km_gmean, Km_ln_cov,\n",
+    "    Ka_gmean, Ka_ln_cov,\n",
+    "    Ki_gmean, Ki_ln_cov\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Metabolite concentrations (M) =\n",
+      " [[3.82325275e-04 1.44004693e-03 5.76597166e-04 1.49537320e-03]\n",
+      " [4.39153033e-05 7.83704559e-05 4.72583720e-05 1.50347324e-04]\n",
+      " [6.31034662e-05 1.76744119e-04 5.49284228e-05 1.00011953e-05]]\n",
+      "\n",
+      "Enzyme concentrations (M) =\n",
+      " [[0.00055748 0.0001642  0.000499   0.0002988 ]\n",
+      " [0.0131026  0.01113245 0.01365815 0.00043843]\n",
+      " [0.00679707 0.00094561 0.00223699 0.00270158]]\n",
+      "\n",
+      "Driving forces (RT) =\n",
+      " [[ 5.41703961  6.16401468  5.75454476  5.55021369]\n",
+      " [ 0.56791486  0.11717169  0.78002659  3.6406712 ]\n",
+      " [ 7.33795925  6.88721609  7.55007099 10.41071559]]\n",
+      "\n",
+      "η(thr) =\n",
       " [[1.   1.   1.   1.  ]\n",
       " [0.43 0.11 0.54 0.97]\n",
       " [1.   1.   1.   1.  ]]\n",
       "\n",
-      "eta_kin =\n",
+      "η(kin) =\n",
       " [[0.14 0.37 0.2  0.34]\n",
       " [0.28 0.41 0.29 0.57]\n",
       " [0.3  0.43 0.31 0.59]]\n",
       "\n",
-      "eta_reg =\n",
+      "η(reg) =\n",
       " [[1.   1.   1.   1.  ]\n",
       " [0.07 0.22 0.1  0.23]\n",
       " [0.25 0.63 0.36 0.64]]\n",
@@ -272,7 +322,7 @@
       "--------------------------------------------------\n",
       "enzymes =  3.16\n",
       "metabolites =  3.35\n",
-      "ΔG'0 =  2.4\n",
+      "Keq =  2.4\n",
       "kcat forward =  1.78\n",
       "kcat reverse =  2.01\n",
       "Km =  1.99\n",
@@ -288,8 +338,8 @@
     "    A_act,\n",
     "    A_inh,\n",
     "    Keq_gmean, Keq_ln_cov,\n",
-    "    conc_enz_gmean, conc_enz_gsigma,\n",
-    "    conc_met_gmean, conc_met_gsigma,\n",
+    "    conc_enz_gmean, conc_enz_gstd,\n",
+    "    conc_met_gmean, conc_met_gstd,\n",
     "    kcatf_gmean, kcatf_ln_cov,\n",
     "    kcatr_gmean, kcatr_ln_cov,\n",
     "    Km_gmean, Km_ln_cov,\n",
@@ -297,6 +347,24 @@
     "    Ki_gmean, Ki_ln_cov,\n",
     "    rate_law = \"1SP\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# All Z-scores\n",
+    "# --------------------------------------------------\n",
+    "# enzymes =  3.16\n",
+    "# metabolites =  3.35\n",
+    "# Keq =  2.4\n",
+    "# kcat forward =  1.78\n",
+    "# kcat reverse =  2.01\n",
+    "# Km =  1.99\n",
+    "# Ka =  4.24\n",
+    "# Ki =  0.0"
    ]
   }
  ],
