--- a/python/toy_example.ipynb
+++ b/python/toy_example.ipynb
@@ -24,23 +24,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "args = {}\n",
+    "\n",
     "# Network topology\n",
     "\n",
-    "S = np.matrix(\n",
+    "args[\"S\"] = np.matrix(\n",
     "    [\n",
     "        [-1, 0, 0],\n",
     "        [1, -1, -1],\n",
     "        [0, 1, 1]\n",
     "    ], dtype=float\n",
     ")\n",
-    "A_act = np.matrix(\n",
+    "args[\"A_act\"] = np.matrix(\n",
     "    [\n",
     "        [0, 1, 2],\n",
     "        [0, 0, 0],\n",
     "        [0, 0, 0]\n",
     "    ], dtype=float\n",
     ")\n",
-    "A_inh = np.matrix(\n",
+    "args[\"A_inh\"] = np.matrix(\n",
     "    [\n",
     "        [0, 0, 0],\n",
     "        [0, 0, 0],\n",
@@ -57,8 +59,8 @@
    "source": [
     "# Priors for Kinetic and Thermodynamic parameters\n",
     "\n",
-    "Keq_gmean = np.array([57, 0.13, 3200])  # geometric mean (assuming a standard concentration of 1M)\n",
-    "Keq_ln_cov = np.array(\n",
+    "args[\"Keq_gmean\"] = np.array([57, 0.13, 3200])  # geometric mean (assuming a standard concentration of 1M)\n",
+    "args[\"Keq_ln_cov\"] = np.array(\n",
     "    [\n",
     "        [4, 0, 0],\n",
     "        [0, 4, 0],\n",
@@ -66,8 +68,8 @@
     "    ]\n",
     ")  # log-scale covariance\n",
     "\n",
-    "kcatf_gmean = Q_([20.0, 8.0, 0.1], \"1/s\")  # geometric mean\n",
-    "kcatf_ln_cov = np.array(\n",
+    "args[\"kcatf_gmean\"] = Q_([20.0, 8.0, 10.0], \"1/s\")  # geometric mean\n",
+    "args[\"kcatf_ln_cov\"] = np.array(\n",
     "    [\n",
     "        [0.48, 0, 0],\n",
     "        [0, 5.3, 0],\n",
@@ -75,8 +77,8 @@
     "    ]\n",
     ") # log-scale covariance\n",
     "\n",
-    "kcatr_gmean = Q_([10.0, 10.0, 10.0], \"1/s\")  # geometric mean\n",
-    "kcatr_ln_cov = np.array(\n",
+    "args[\"kcatr_gmean\"] = Q_([3.5e-3, 6.2e4, 3.1e-1], \"1/s\")  # geometric mean\n",
+    "args[\"kcatr_ln_cov\"] = np.array(\n",
     "    [\n",
     "        [21.2, 0, 0],\n",
     "        [0, 21.2, 0],\n",
@@ -86,8 +88,8 @@
     "\n",
     "# the K parameters are only for existing connections in the S, A_act and A_inh matrices.\n",
     "# the order of values is \"metabolite-first\".\n",
-    "Km_gmean = Q_([1e-2, 1e-4, 1e-4, 1e-3, 1e-1, 1e-1], \"M\")\n",
-    "Km_ln_cov = np.array(\n",
+    "args[\"Km_gmean\"] = Q_([1e-2, 1e-4, 1e-4, 1e-3, 1e-1, 1e-1], \"M\")\n",
+    "args[\"Km_ln_cov\"] = np.array(\n",
     "    [\n",
     "        [5.3, 0, 0, 0, 0, 0],\n",
     "        [0, 5.3, 0, 0, 0, 0],\n",
@@ -98,16 +100,16 @@
     "    ]\n",
     ") # log-scale covariance\n",
     "\n",
-    "Ka_gmean = Q_([1, 1], \"M\")\n",
-    "Ka_ln_cov = np.array(\n",
+    "args[\"Ka_gmean\"] = Q_([1, 1], \"M\")\n",
+    "args[\"Ka_ln_cov\"] = np.array(\n",
     "    [\n",
     "        [21.2, 0],\n",
     "        [0, 21.2],\n",
     "    ]\n",
     ")\n",
     "\n",
-    "Ki_gmean = Q_([1], \"M\")\n",
-    "Ki_ln_cov = np.array(\n",
+    "args[\"Ki_gmean\"] = Q_([1], \"M\")\n",
+    "args[\"Ki_ln_cov\"] = np.array(\n",
     "    [\n",
     "        [21.2],\n",
     "    ]\n",
@@ -116,53 +118,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def to_dense_matrix(S, mu: np.array) -> np.array:\n",
-    "#     Nc, Nr = S.shape\n",
-    "    \n",
-    "#     if mu.size == 0:\n",
-    "#         return np.zeros((Nc, Nr))\n",
-    "\n",
-    "#     assert mu.ndim == 1\n",
-    "#     K_mat = []\n",
-    "#     k = 0\n",
-    "#     for i in range(Nc):\n",
-    "#         row = []\n",
-    "#         for j in range(Nr):\n",
-    "#             if S[i, j] != 0:\n",
-    "#                 row.append(mu[k])\n",
-    "#                 k += 1\n",
-    "#             else:\n",
-    "#                 row.append(0)\n",
-    "#         K_mat.append(np.hstack(row))\n",
-    "#     K_mat = np.vstack(K_mat)\n",
-    "#     return K_mat\n",
-    "\n",
-    "# Km_gmean_full = to_dense_matrix(S, np.log(Km_gmean.m_as(\"M\")))\n",
-    "\n",
-    "# # use Haldane to find the k\n",
-    "# kcatr_gmean = np.exp(np.diag(S.T @ Km_gmean_full) + np.log(kcatf_gmean.m_as(\"1/s\")) - np.log(Keq_gmean)) * Q_(\"1/s\")\n",
-    "# kcatr_ln_cov = np.array(\n",
-    "#     [\n",
-    "#         [21.2, 0, 0],\n",
-    "#         [0, 21.2, 0],\n",
-    "#         [0, 0, 21.2],\n",
-    "#     ]\n",
-    "# ) # log-scale covariance\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "# condition dependent data (columns represent conditions)\n",
     "\n",
-    "fluxes = Q_(\n",
+    "args[\"fluxes\"] = Q_(\n",
     "    [\n",
     "        [2.0, 1.5, 2.5, 2.5],\n",
     "        [1.0, 1.0, 2.0, 0.5],\n",
@@ -170,200 +132,162 @@
     "    ], \"mM/s\"\n",
     ")\n",
     "\n",
-    "conc_enz_gmean = Q_(\n",
+    "args[\"conc_enz_gmean\"] = Q_(\n",
     "    [\n",
-    "        [1e-3, 1e-3, 1e-3, 3e-3],\n",
-    "        [2e-3, 3e-3, 1e-3, 2e-3],\n",
-    "        [1e-3, 2e-3, 2e-3, 1e-3],\n",
+    "#        [1e-3, 1e-3, 1e-3, 3e-3],\n",
+    "#        [2e-3, 3e-3, 1e-3, 2e-3],\n",
+    "#        [1e-3, 2e-3, 2e-3, 1e-3],\n",
+    "        [1.00177750e-04, 7.50146605e-05, 1.25332322e-04, 1.25222188e-04],\n",
+    "        [1.01765625e-01, 5.47083333e-02, 1.68439655e-01, 2.71104167e-01],\n",
+    "        [2.51004922e+01, 5.10065940e-01, 1.25501807e+01, 2.00406463e+02],\n",
     "    ], \"M\")  # geometric mean\n",
     "\n",
-    "conc_enz_gstd = np.array(\n",
+    "args[\"conc_enz_gstd\"] = np.array(\n",
     "    [\n",
-    "        [10.0, 10.0, 10.0, 10.0],\n",
-    "        [10.0, 10.0, 10.0, 10.0],\n",
-    "        [10.0, 10.0, 10.0, 10.0],\n",
+    "        [1.1, 1.1, 1.1, 1.1],\n",
+    "        [1.1, 1.1, 1.1, 1.1],\n",
+    "        [1.1, 1.1, 1.1, 1.1],\n",
     "    ]\n",
     ")  # geometric standard deviation\n",
     "\n",
-    "conc_met_gmean = Q_(\n",
+    "args[\"conc_met_gmean\"] = Q_(\n",
     "    [\n",
-    "        [1e-4, 1e-3, 1e-4, 1e-3],\n",
-    "        [1e-5, 1e-5, 1e-5, 1e-4],\n",
-    "        [1e-4, 1e-3, 1e-4, 1e-5],\n",
+    "        [2e-3, 1e-2, 2e-3, 1e-3],\n",
+    "        [2e-4, 1e-4, 3e-4, 1e-4],\n",
+    "        [1e-5, 1e-5, 1e-5, 1e-5],\n",
     "    ], \"M\"\n",
     ")  # geometric mean\n",
     "\n",
-    "conc_met_gstd = np.array(\n",
+    "args[\"conc_met_gstd\"] = np.array(\n",
     "    [\n",
-    "        [10.0, 10.0, 10.0, 10.0],\n",
-    "        [10.0, 10.0, 10.0, 10.0],\n",
-    "        [10.0, 10.0, 10.0, 10.0],\n",
+    "        [1.1, 1.1, 1.1, 1.1],\n",
+    "        [1.1, 1.1, 1.1, 1.1],\n",
+    "        [1.1, 1.1, 1.1, 1.1],\n",
     "    ]\n",
     ")  # geometric standard deviation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Metabolite concentrations (M) =\n",
-      " [[3.46812613e-04 1.99831443e-03 4.89547517e-04 1.83920507e-03]\n",
-      " [5.07859337e-05 6.87125502e-05 4.05883348e-05 1.42008688e-04]\n",
-      " [6.73102048e-05 1.59258278e-04 5.34581803e-05 9.99603775e-06]]\n",
-      "\n",
-      "Enzyme concentrations (M) =\n",
-      " [[0.00052168 0.00012085 0.00047948 0.00023144]\n",
-      " [0.01312676 0.01038445 0.022323   0.00042749]\n",
-      " [0.00540467 0.00078882 0.00233521 0.00218328]]\n",
-      "\n",
-      "Driving forces (RT) =\n",
-      " [[ 5.20565824  6.6546205   5.77449387  5.84569354]\n",
-      " [ 0.67934535  0.12044238  0.68561882  3.61473723]\n",
-      " [ 7.42654841  6.86764544  7.43282188 10.36194029]]\n",
-      "\n",
-      "η(thr) =\n",
-      " [[0.99 1.   1.   1.  ]\n",
-      " [0.49 0.11 0.5  0.97]\n",
-      " [1.   1.   1.   1.  ]]\n",
-      "\n",
-      "η(kin) =\n",
-      " [[0.16 0.5  0.21 0.44]\n",
-      " [0.29 0.35 0.24 0.53]\n",
-      " [0.31 0.37 0.26 0.55]]\n",
-      "\n",
-      "η(reg) =\n",
-      " [[1.   1.   1.   1.  ]\n",
-      " [0.06 0.27 0.08 0.25]\n",
-      " [0.26 0.74 0.36 0.72]]\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "All Z-scores\n",
-      "--------------------------------------------------\n",
-      "enzymes =  3.43\n",
-      "metabolites =  3.26\n",
-      "Keq =  2.43\n",
-      "kcat forward =  1.95\n",
-      "kcat reverse =  1.89\n",
-      "Km =  2.04\n",
-      "Ka =  4.31\n",
-      "Ki =  0.0\n"
+      "enzyme concentrations: \n",
+      " [[1.00177750e-04 7.50146605e-05 1.25332322e-04 1.25222188e-04]\n",
+      " [1.01765625e-01 5.47083333e-02 1.68439655e-01 2.71104167e-01]\n",
+      " [2.51004922e+01 5.10065940e-01 1.25501807e+01 2.00406463e+02]]\n",
+      "kcatr: \n",
+      " [3.50877193e-03 6.15384615e+04 3.12500000e-01]\n"
      ]
     }
    ],
    "source": [
-    "model_balancing.solve(\n",
-    "    S,\n",
-    "    fluxes,\n",
-    "    A_act,\n",
-    "    A_inh,\n",
-    "    Keq_gmean, Keq_ln_cov,\n",
-    "    conc_enz_gmean, conc_enz_gstd,\n",
-    "    conc_met_gmean, conc_met_gstd,\n",
-    "    kcatf_gmean, kcatf_ln_cov,\n",
-    "    kcatr_gmean, kcatr_ln_cov,\n",
-    "    Km_gmean, Km_ln_cov,\n",
-    "    Ka_gmean, Ka_ln_cov,\n",
-    "    Ki_gmean, Ki_ln_cov\n",
+    "fluxes, S, A_act, A_inh = args[\"fluxes\"], args[\"S\"], args[\"A_act\"], args[\"A_inh\"]\n",
+    "ln_Keq = np.log(args[\"Keq_gmean\"])\n",
+    "ln_kcatf = np.log(args[\"kcatf_gmean\"].m_as(\"1/s\"))\n",
+    "ln_Km = np.log(args[\"Km_gmean\"].m_as(\"M\"))\n",
+    "ln_Ka = np.log(args[\"Ka_gmean\"].m_as(\"M\"))\n",
+    "ln_Ki = np.log(args[\"Ki_gmean\"].m_as(\"M\"))\n",
+    "ln_conc_met = np.log(args[\"conc_met_gmean\"].m_as(\"M\"))\n",
+    "\n",
+    "print(\"enzyme concentrations: \\n\", \n",
+    "    np.exp(\n",
+    "        model_balancing._ln_conc_enz(\n",
+    "            ln_Keq, ln_kcatf, ln_Km, ln_Ka, ln_Ki, ln_conc_met,\n",
+    "            fluxes, S, A_act, A_inh , rate_law=\"S\").value\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "print(\n",
+    "    \"kcatr: \\n\", \n",
+    "    np.exp(model_balancing._ln_kcatr(ln_kcatf, ln_Km, ln_Keq, S).value)\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "************ rate law = S **************\n",
+      "\n",
       "\n",
       "Metabolite concentrations (M) =\n",
-      " [[3.82325275e-04 1.44004693e-03 5.76597166e-04 1.49537320e-03]\n",
-      " [4.39153033e-05 7.83704559e-05 4.72583720e-05 1.50347324e-04]\n",
-      " [6.31034662e-05 1.76744119e-04 5.49284228e-05 1.00011953e-05]]\n",
+      " [[2.01147644e-03 9.99996310e-03 2.00005054e-03 9.99993010e-04]\n",
+      " [2.00012315e-04 1.00005903e-04 3.00008343e-04 1.00005908e-04]\n",
+      " [9.99928542e-06 9.99927648e-06 9.99925604e-06 9.99926613e-06]]\n",
       "\n",
       "Enzyme concentrations (M) =\n",
-      " [[0.00055748 0.0001642  0.000499   0.0002988 ]\n",
-      " [0.0131026  0.01113245 0.01365815 0.00043843]\n",
-      " [0.00679707 0.00094561 0.00223699 0.00270158]]\n",
+      " [[5.14538167e-05 3.84553019e-05 6.44452397e-05 6.43187132e-05]\n",
+      " [9.01512152e-04 6.84143032e-04 1.69675487e-03 8.38668335e-04]\n",
+      " [1.25882056e-04 3.73680494e-05 6.31473265e-05 4.19343572e-04]]\n",
       "\n",
       "Driving forces (RT) =\n",
-      " [[ 5.41703961  6.16401468  5.75454476  5.55021369]\n",
-      " [ 0.56791486  0.11717169  0.78002659  3.6406712 ]\n",
-      " [ 7.33795925  6.88721609  7.55007099 10.41071559]]\n",
+      " [[ 5.54942682  7.84628896  5.13829893  5.54370051]\n",
+      " [ 1.8051896   1.11204076  2.21062388  1.11204185]\n",
+      " [10.72823228 10.03508344 11.13366656 10.03508453]]\n",
       "\n",
       "η(thr) =\n",
-      " [[1.   1.   1.   1.  ]\n",
-      " [0.43 0.11 0.54 0.97]\n",
+      " [[1.   1.   0.99 1.  ]\n",
+      " [0.84 0.67 0.89 0.67]\n",
       " [1.   1.   1.   1.  ]]\n",
       "\n",
       "η(kin) =\n",
-      " [[0.14 0.37 0.2  0.34]\n",
-      " [0.28 0.41 0.29 0.57]\n",
-      " [0.3  0.43 0.31 0.59]]\n",
+      " [[1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]]\n",
       "\n",
       "η(reg) =\n",
       " [[1.   1.   1.   1.  ]\n",
-      " [0.07 0.22 0.1  0.23]\n",
-      " [0.25 0.63 0.36 0.64]]\n",
+      " [0.51 0.84 0.51 0.34]\n",
+      " [0.51 0.86 0.51 0.3 ]]\n",
       "\n",
       "\n",
       "\n",
       "\n",
       "All Z-scores\n",
       "--------------------------------------------------\n",
-      "enzymes =  3.16\n",
-      "metabolites =  3.35\n",
-      "Keq =  2.4\n",
-      "kcat forward =  1.78\n",
-      "kcat reverse =  2.01\n",
-      "Km =  1.99\n",
-      "Ka =  4.24\n",
+      "enzymes =  0.0\n",
+      "metabolites =  0.0\n",
+      "Keq =  0.37\n",
+      "kcat forward =  1.21\n",
+      "kcat reverse =  1.99\n",
+      "Km =  0.99\n",
+      "Ka =  4.23\n",
       "Ki =  0.0\n"
      ]
     }
    ],
    "source": [
-    "model_balancing.solve(\n",
-    "    S,\n",
-    "    fluxes,\n",
-    "    A_act,\n",
-    "    A_inh,\n",
-    "    Keq_gmean, Keq_ln_cov,\n",
-    "    conc_enz_gmean, conc_enz_gstd,\n",
-    "    conc_met_gmean, conc_met_gstd,\n",
-    "    kcatf_gmean, kcatf_ln_cov,\n",
-    "    kcatr_gmean, kcatr_ln_cov,\n",
-    "    Km_gmean, Km_ln_cov,\n",
-    "    Ka_gmean, Ka_ln_cov,\n",
-    "    Ki_gmean, Ki_ln_cov,\n",
-    "    rate_law = \"1SP\"\n",
-    ")"
+    "for rate_law in [\"S\"]:#[\"S\", \"1S\", \"SP\", \"1SP\", \"CM\"]:\n",
+    "    print(f\"************ rate law = {rate_law} **************\\n\")\n",
+    "    model_balancing.solve(\n",
+    "        **args,\n",
+    "        rate_law=rate_law\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# All Z-scores\n",
-    "# --------------------------------------------------\n",
-    "# enzymes =  3.16\n",
-    "# metabolites =  3.35\n",
-    "# Keq =  2.4\n",
-    "# kcat forward =  1.78\n",
-    "# kcat reverse =  2.01\n",
-    "# Km =  1.99\n",
-    "# Ka =  4.24\n",
+    "# enzymes =  3.43\n",
+    "# metabolites =  3.26\n",
+    "# Keq =  2.43\n",
+    "# kcat forward =  1.95\n",
+    "# kcat reverse =  1.89\n",
+    "# Km =  2.04\n",
+    "# Ka =  4.31\n",
     "# Ki =  0.0"
    ]
   }
