adding initial values to CVXPY variables

--- a/python/toy_example_noreg.ipynb
+++ b/python/toy_example_noreg.ipynb
@@ -38,7 +38,7 @@
     ")\n",
     "args[\"A_act\"] = np.matrix(\n",
     "    [\n",
-    "        [0, 1, 2],\n",
+    "        [0, 0, 0],\n",
     "        [0, 0, 0],\n",
     "        [0, 0, 0]\n",
     "    ], dtype=float\n",
@@ -47,7 +47,7 @@
     "    [\n",
     "        [0, 0, 0],\n",
     "        [0, 0, 0],\n",
-    "        [2, 0, 0]\n",
+    "        [0, 0, 0]\n",
     "    ], dtype=float\n",
     ")"
    ]
@@ -60,30 +60,29 @@
    "source": [
     "# Priors for Kinetic and Thermodynamic parameters\n",
     "\n",
-    "args[\"Keq_gmean\"] = Q_([57, 0.13, 3200], \"\")  # geometric mean (assuming a standard concentration of 1M)\n",
+    "args[\"Keq_gmean\"] = Q_([5, 3, 5], \"\")  # geometric mean (assuming a standard concentration of 1M)\n",
     "args[\"Keq_ln_cov\"] = np.array(\n",
     "    [\n",
-    "        [4, 0, 0],\n",
-    "        [0, 4, 0],\n",
-    "        [0, 0, 4],\n",
+    "        [1, 0, 0],\n",
+    "        [0, 1, 0],\n",
+    "        [0, 0, 1],\n",
     "    ]\n",
     ")  # log-scale covariance\n",
     "\n",
-    "args[\"kcatf_gmean\"] = Q_([20.0, 8.0, 10.0], \"1/s\")  # geometric mean\n",
+    "args[\"kcatf_gmean\"] = Q_([5.0, 5.0, 5.0], \"1/s\")  # geometric mean\n",
     "args[\"kcatf_ln_cov\"] = np.array(\n",
     "    [\n",
-    "        [0.48, 0, 0],\n",
-    "        [0, 5.3, 0],\n",
-    "        [0, 0, 5.3],\n",
+    "        [1, 0, 0],\n",
+    "        [0, 1, 0],\n",
+    "        [0, 0, 1],\n",
     "    ]\n",
     ") # log-scale covariance\n",
     "\n",
-    "args[\"kcatr_gmean\"] = Q_([3.5e-3, 6.2e4, 3.1e-1], \"1/s\")  # geometric mean\n",
     "args[\"kcatr_ln_cov\"] = np.array(\n",
     "    [\n",
-    "        [21.2, 0, 0],\n",
-    "        [0, 21.2, 0],\n",
-    "        [0, 0, 21.2],\n",
+    "        [1, 0, 0],\n",
+    "        [0, 1, 0],\n",
+    "        [0, 0, 1],\n",
     "    ]\n",
     ") # log-scale covariance\n",
     "\n",
@@ -92,34 +91,31 @@
     "args[\"Km_gmean\"] = Q_([1e-2, 1e-4, 1e-4, 1e-3, 1e-1, 1e-1], \"M\")\n",
     "args[\"Km_ln_cov\"] = np.array(\n",
     "    [\n",
-    "        [5.3, 0, 0, 0, 0, 0],\n",
-    "        [0, 5.3, 0, 0, 0, 0],\n",
-    "        [0, 0, 5.3, 0, 0, 0],\n",
-    "        [0, 0, 0, 5.3, 0, 0],\n",
-    "        [0, 0, 0, 0, 5.3, 0],\n",
-    "        [0, 0, 0, 0, 0, 5.3],\n",
+    "        [1, 0, 0, 0, 0, 0],\n",
+    "        [0, 1, 0, 0, 0, 0],\n",
+    "        [0, 0, 1, 0, 0, 0],\n",
+    "        [0, 0, 0, 1, 0, 0],\n",
+    "        [0, 0, 0, 0, 1, 0],\n",
+    "        [0, 0, 0, 0, 0, 1],\n",
     "    ]\n",
-    ") # log-scale covariance\n",
-    "\n",
-    "args[\"Ka_gmean\"] = Q_([1, 1], \"M\")\n",
-    "args[\"Ka_ln_cov\"] = np.array(\n",
-    "    [\n",
-    "        [21.2, 0],\n",
-    "        [0, 21.2],\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "args[\"Ki_gmean\"] = Q_([1], \"M\")\n",
-    "args[\"Ki_ln_cov\"] = np.array(\n",
-    "    [\n",
-    "        [21.2],\n",
-    "    ]\n",
-    ")"
+    ") # log-scale covariance"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "args[\"Ka_gmean\"] = Q_([], \"M\")\n",
+    "args[\"Ka_ln_cov\"] = np.array([])\n",
+    "args[\"Ki_gmean\"] = Q_([], \"M\")\n",
+    "args[\"Ki_ln_cov\"] = np.array([])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,13 +128,6 @@
     "        [1.0, 0.5, 0.5, 2.0],\n",
     "    ], \"mM/s\"\n",
     ")\n",
-    "\n",
-    "args[\"conc_enz_gmean\"] = Q_(\n",
-    "    [\n",
-    "        [1e-3, 1e-3, 1e-3, 3e-3],\n",
-    "        [2e-3, 3e-3, 1e-3, 2e-3],\n",
-    "        [1e-3, 2e-3, 2e-3, 1e-3],\n",
-    "    ], \"M\")  # geometric mean\n",
     "\n",
     "args[\"conc_enz_gstd\"] = np.array(\n",
     "    [\n",
@@ -167,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,12 +168,12 @@
     "ln_Ki = np.log(args[\"Ki_gmean\"].m_as(\"M\"))\n",
     "ln_conc_met = np.log(args[\"conc_met_gmean\"].m_as(\"M\"))\n",
     "\n",
-    "args[\"kcatr_gmean\"] = np.exp(_ln_kcatr(ln_kcatf, ln_Km, ln_Keq, S).value) * Q_(\"1/s\")"
+    "args[\"kcatr_gmean\"] = np.exp(_ln_kcatr(ln_kcatf, ln_Km, ln_Keq, S).value) * Q_(\"1/s\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -215,37 +204,37 @@
       "************ rate law = CM **************\n",
       "\n",
       "initial Z-score = 0.00e+00\n",
-      "optimal Z-score = 3.83e+00\n",
+      "optimal Z-score = 4.41e-07\n",
       "\n",
       "Metabolite concentrations (M) =\n",
-      " [[2.00992716e-03 1.00118712e-02 2.00351499e-03 1.00000328e-03]\n",
-      " [2.00002026e-04 9.99562158e-05 2.99659113e-04 1.00001711e-04]\n",
-      " [9.99989354e-06 9.99990036e-06 1.00000319e-05 9.99985407e-06]]\n",
+      " [[2.00000109e-03 1.00000394e-02 2.00000469e-03 1.00000000e-03]\n",
+      " [1.99999974e-04 9.99999847e-05 3.00001397e-04 1.00000073e-04]\n",
+      " [1.00000072e-05 9.99999296e-06 9.99997419e-06 1.00000050e-05]]\n",
       "\n",
       "Enzyme concentrations (M) =\n",
-      " [[3.10071970e-04 8.23387935e-05 4.69400944e-04 5.21302867e-04]\n",
-      " [8.36266253e-04 1.46535816e-03 1.23370664e-03 2.44096372e-03]\n",
-      " [3.37382114e-03 8.95015208e-04 1.22389573e-03 3.10387430e-02]]\n",
+      " [[0.00652748 0.00090145 0.01081944 0.01070925]\n",
+      " [0.00030499 0.00041367 0.00053915 0.00020683]\n",
+      " [0.001212   0.00112234 0.0004362  0.00448935]]\n",
       "\n",
       "Driving forces (RT) =\n",
-      " [[ 6.67669512  8.97596338  6.26918172  6.67174011]\n",
-      " [ 0.9555207   0.26192477  1.35982491  0.26238445]\n",
-      " [11.06665378 10.37305785 11.47095799 10.37351753]]\n",
+      " [[3.91229426 6.21488277 3.50682616 3.91229285]\n",
+      " [4.09445398 3.4013082  4.49992718 3.40130788]\n",
+      " [4.60526666 3.91212088 5.01073986 3.91212056]]\n",
       "\n",
       "η(thr) =\n",
-      " [[1.   1.   1.   1.  ]\n",
-      " [0.62 0.23 0.74 0.23]\n",
-      " [1.   1.   1.   1.  ]]\n",
+      " [[0.98 1.   0.97 0.98]\n",
+      " [0.98 0.97 0.99 0.97]\n",
+      " [0.99 0.98 0.99 0.98]]\n",
       "\n",
       "η(kin) =\n",
-      " [[0.24 0.69 0.2  0.18]\n",
+      " [[0.06 0.33 0.05 0.05]\n",
       " [0.67 0.5  0.75 0.5 ]\n",
       " [0.17 0.09 0.23 0.09]]\n",
       "\n",
       "η(reg) =\n",
-      " [[1.   1.   1.   1.  ]\n",
-      " [0.36 0.74 0.36 0.22]\n",
-      " [0.18 0.61 0.18 0.07]]\n",
+      " [[1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]]\n",
       "\n",
       "\n",
       "\n",
@@ -254,11 +243,11 @@
       "--------------------------------------------------\n",
       "enzymes =  0.0\n",
       "metabolites =  0.0\n",
-      "Keq =  0.03\n",
-      "kcat forward =  0.16\n",
-      "kcat reverse =  0.14\n",
-      "Km =  0.35\n",
-      "Ka =  3.15\n",
+      "Keq =  0.0\n",
+      "kcat forward =  0.0\n",
+      "kcat reverse =  0.0\n",
+      "Km =  0.0\n",
+      "Ka =  0.0\n",
       "Ki =  0.0\n"
      ]
     }
@@ -283,10 +272,78 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "from model_balancing import _z_score, _ln_capacity, _ln_eta_thermodynamic, _ln_eta_kinetic, _ln_eta_regulation\n",
+    "\n",
+    "fluxes, S, A_act, A_inh = args[\"fluxes\"], args[\"S\"], args[\"A_act\"], args[\"A_inh\"]\n",
+    "\n",
+    "ln_Keq = cp.Variable(3)\n",
+    "ln_Keq.value = np.log(args[\"Keq_gmean\"].m_as(\"\"))\n",
+    "\n",
+    "ln_kcatf = cp.Variable(3, )\n",
+    "ln_kcatf.value = np.log(args[\"kcatf_gmean\"].m_as(\"1/s\"))\n",
+    "\n",
+    "ln_Km = cp.Variable(args[\"Km_gmean\"].size)\n",
+    "ln_Km.value = np.log(args[\"Km_gmean\"].m_as(\"M\"))\n",
+    "\n",
+    "ln_conc_met = cp.Variable(shape=(3, 4))\n",
+    "ln_conc_met.value = np.log(args[\"conc_met_gmean\"].m_as(\"M\"))\n",
+    "\n",
+    "ln_kcatr = _ln_kcatr(ln_kcatf, ln_Km, ln_Keq, S)\n",
+    "\n",
+    "driving_forces = _driving_forces(ln_Keq, ln_conc_met, S)\n",
+    "\n",
+    "ln_capacity = _ln_capacity(fluxes, ln_kcatf)\n",
+    "ln_eta_thermodynamic = _ln_eta_thermodynamic(driving_forces)\n",
+    "ln_eta_kinetic = _ln_eta_kinetic(ln_conc_met, ln_Km, S, rate_law=\"S\")\n",
+    "ln_eta_regulation = _ln_eta_regulation(ln_conc_met, ln_Ka, ln_Ki, A_act, A_inh)\n",
+    "ln_conc_enz = ln_capacity - ln_eta_thermodynamic - ln_eta_kinetic - ln_eta_regulation\n",
+    "\n",
+    "ln_conc_enz.value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "z2_scores_met = sum(cp.square((ln_conc_met - np.log(args[\"conc_met_gmean\"].m_as(\"M\"))) / np.log(args[\"conc_met_gstd\"])).flatten())\n",
+    "z2_scores_kcatr = _z_score(ln_kcatr, np.log(args[\"kcatr_gmean\"].m_as(\"1/s\")), args[\"kcatr_ln_cov\"])\n",
+    "z2_scores_Keq = _z_score(ln_Keq, np.log(args[\"Keq_gmean\"].m_as(\"\")), args[\"Keq_ln_cov\"])\n",
+    "z2_scores_kcatf = _z_score(ln_kcatf, np.log(args[\"kcatf_gmean\"].m_as(\"1/s\")), args[\"kcatf_ln_cov\"])\n",
+    "z2_scores_Km = _z_score(ln_Km, np.log(args[\"Km_gmean\"].m_as(\"M\")), args[\"Km_ln_cov\"])\n",
+    "z2_scores_enz = sum(cp.square(\n",
+    "    cp.pos(ln_conc_enz - np.log(args['conc_enz_gmean'].m_as(\"M\"))) / np.log(args[\"conc_enz_gstd\"])\n",
+    ").flatten())\n",
+    "\n",
+    "objective = cp.Minimize(\n",
+    "        z2_scores_met +\n",
+    "        z2_scores_Keq +\n",
+    "        z2_scores_kcatf +\n",
+    "        z2_scores_Km +\n",
+    "        z2_scores_kcatr +\n",
+    "        z2_scores_enz\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "objective.value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_ln_conc_enz(ln_Keq, ln_kcatf, ln_Km, ln_Ka, ln_Ki, ln_conc_met, fluxes, S, A_act, A_inh , rate_law=\"S\").value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
