using MOSEK as the default solver

--- a/python/toy_example.ipynb
+++ b/python/toy_example.ipynb
@@ -10,7 +10,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.status.idle": "2020-08-28T17:30:02.771426Z",
+     "shell.execute_reply": "2020-08-28T17:30:02.770830Z",
+     "shell.execute_reply.started": "2020-08-28T17:30:01.926909Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -22,11 +28,43 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-08-28T17:30:02.772558Z",
+     "iopub.status.busy": "2020-08-28T17:30:02.772355Z",
+     "iopub.status.idle": "2020-08-28T17:30:02.777636Z",
+     "shell.execute_reply": "2020-08-28T17:30:02.777146Z",
+     "shell.execute_reply.started": "2020-08-28T17:30:02.772536Z"
+    }
+   },
    "outputs": [],
    "source": [
+    "use_regulation = False\n",
     "args = {}\n",
     "\n",
+    "# choose solver\n",
+    "\n",
+    "if cp.MOSEK in cp.installed_solvers():\n",
+    "    args[\"solver\"] = cp.MOSEK\n",
+    "else:\n",
+    "    #args[\"solver\"] = cp.SCS\n",
+    "    args[\"solver\"] = cp.ECOS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-08-28T17:30:02.778856Z",
+     "iopub.status.busy": "2020-08-28T17:30:02.778583Z",
+     "iopub.status.idle": "2020-08-28T17:30:02.786433Z",
+     "shell.execute_reply": "2020-08-28T17:30:02.785566Z",
+     "shell.execute_reply.started": "2020-08-28T17:30:02.778833Z"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# Network topology\n",
     "\n",
     "args[\"S\"] = np.matrix(\n",
@@ -36,26 +74,51 @@
     "        [0, 1, 1]\n",
     "    ], dtype=float\n",
     ")\n",
-    "args[\"A_act\"] = np.matrix(\n",
-    "    [\n",
-    "        [0, 1, 2],\n",
-    "        [0, 0, 0],\n",
-    "        [0, 0, 0]\n",
-    "    ], dtype=float\n",
-    ")\n",
-    "args[\"A_inh\"] = np.matrix(\n",
-    "    [\n",
-    "        [0, 0, 0],\n",
-    "        [0, 0, 0],\n",
-    "        [2, 0, 0]\n",
-    "    ], dtype=float\n",
-    ")"
+    "\n",
+    "if use_regulation:\n",
+    "    args[\"A_act\"] = np.matrix(\n",
+    "        [\n",
+    "            [0, 1, 2],\n",
+    "            [0, 0, 0],\n",
+    "            [0, 0, 0]\n",
+    "        ], dtype=float\n",
+    "    )\n",
+    "    args[\"A_inh\"] = np.matrix(\n",
+    "        [\n",
+    "            [0, 0, 0],\n",
+    "            [0, 0, 0],\n",
+    "            [2, 0, 0]\n",
+    "        ], dtype=float\n",
+    "    )\n",
+    "else:\n",
+    "    args[\"A_act\"] = np.matrix(\n",
+    "        [\n",
+    "            [0, 0, 0],\n",
+    "            [0, 0, 0],\n",
+    "            [0, 0, 0]\n",
+    "        ], dtype=float\n",
+    "    )\n",
+    "    args[\"A_inh\"] = np.matrix(\n",
+    "        [\n",
+    "            [0, 0, 0],\n",
+    "            [0, 0, 0],\n",
+    "            [0, 0, 0]\n",
+    "        ], dtype=float\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-08-28T17:30:02.787873Z",
+     "iopub.status.busy": "2020-08-28T17:30:02.787616Z",
+     "iopub.status.idle": "2020-08-28T17:30:02.802596Z",
+     "shell.execute_reply": "2020-08-28T17:30:02.802034Z",
+     "shell.execute_reply.started": "2020-08-28T17:30:02.787855Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Priors for Kinetic and Thermodynamic parameters\n",
@@ -63,27 +126,27 @@
     "args[\"Keq_gmean\"] = Q_([57, 0.13, 3200], \"\")  # geometric mean (assuming a standard concentration of 1M)\n",
     "args[\"Keq_ln_cov\"] = np.array(\n",
     "    [\n",
-    "        [4, 0, 0],\n",
-    "        [0, 4, 0],\n",
-    "        [0, 0, 4],\n",
+    "        [1, 0, 0],\n",
+    "        [0, 1, 0],\n",
+    "        [0, 0, 1],\n",
     "    ]\n",
     ")  # log-scale covariance\n",
     "\n",
     "args[\"kcatf_gmean\"] = Q_([20.0, 8.0, 10.0], \"1/s\")  # geometric mean\n",
     "args[\"kcatf_ln_cov\"] = np.array(\n",
     "    [\n",
-    "        [0.48, 0, 0],\n",
-    "        [0, 5.3, 0],\n",
-    "        [0, 0, 5.3],\n",
+    "        [1, 0, 0],\n",
+    "        [0, 1, 0],\n",
+    "        [0, 0, 1],\n",
     "    ]\n",
     ") # log-scale covariance\n",
     "\n",
     "args[\"kcatr_gmean\"] = Q_([3.5e-3, 6.2e4, 3.1e-1], \"1/s\")  # geometric mean\n",
     "args[\"kcatr_ln_cov\"] = np.array(\n",
     "    [\n",
-    "        [21.2, 0, 0],\n",
-    "        [0, 21.2, 0],\n",
-    "        [0, 0, 21.2],\n",
+    "        [1, 0, 0],\n",
+    "        [0, 1, 0],\n",
+    "        [0, 0, 1],\n",
     "    ]\n",
     ") # log-scale covariance\n",
     "\n",
@@ -92,35 +155,43 @@
     "args[\"Km_gmean\"] = Q_([1e-2, 1e-4, 1e-4, 1e-3, 1e-1, 1e-1], \"M\")\n",
     "args[\"Km_ln_cov\"] = np.array(\n",
     "    [\n",
-    "        [5.3, 0, 0, 0, 0, 0],\n",
-    "        [0, 5.3, 0, 0, 0, 0],\n",
-    "        [0, 0, 5.3, 0, 0, 0],\n",
-    "        [0, 0, 0, 5.3, 0, 0],\n",
-    "        [0, 0, 0, 0, 5.3, 0],\n",
-    "        [0, 0, 0, 0, 0, 5.3],\n",
+    "        [1, 0, 0, 0, 0, 0],\n",
+    "        [0, 1, 0, 0, 0, 0],\n",
+    "        [0, 0, 1, 0, 0, 0],\n",
+    "        [0, 0, 0, 1, 0, 0],\n",
+    "        [0, 0, 0, 0, 1, 0],\n",
+    "        [0, 0, 0, 0, 0, 1],\n",
     "    ]\n",
     ") # log-scale covariance\n",
     "\n",
     "args[\"Ka_gmean\"] = Q_([1, 1], \"M\")\n",
     "args[\"Ka_ln_cov\"] = np.array(\n",
     "    [\n",
-    "        [21.2, 0],\n",
-    "        [0, 21.2],\n",
+    "        [1, 0],\n",
+    "        [0, 1],\n",
     "    ]\n",
     ")\n",
     "\n",
     "args[\"Ki_gmean\"] = Q_([1], \"M\")\n",
     "args[\"Ki_ln_cov\"] = np.array(\n",
     "    [\n",
-    "        [21.2],\n",
+    "        [1],\n",
     "    ]\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-08-28T17:30:02.803787Z",
+     "iopub.status.busy": "2020-08-28T17:30:02.803512Z",
+     "iopub.status.idle": "2020-08-28T17:30:02.810861Z",
+     "shell.execute_reply": "2020-08-28T17:30:02.810217Z",
+     "shell.execute_reply.started": "2020-08-28T17:30:02.803766Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# condition dependent data (columns represent conditions)\n",
@@ -167,8 +238,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-08-28T17:30:02.812052Z",
+     "iopub.status.busy": "2020-08-28T17:30:02.811858Z",
+     "iopub.status.idle": "2020-08-28T17:30:02.818642Z",
+     "shell.execute_reply": "2020-08-28T17:30:02.818128Z",
+     "shell.execute_reply.started": "2020-08-28T17:30:02.812034Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fluxes, S, A_act, A_inh = args[\"fluxes\"], args[\"S\"], args[\"A_act\"], args[\"A_inh\"]\n",
@@ -184,8 +263,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-08-28T17:30:02.819498Z",
+     "iopub.status.busy": "2020-08-28T17:30:02.819320Z",
+     "iopub.status.idle": "2020-08-28T17:30:02.823943Z",
+     "shell.execute_reply": "2020-08-28T17:30:02.823435Z",
+     "shell.execute_reply.started": "2020-08-28T17:30:02.819479Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -205,8 +292,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-08-28T17:30:02.825195Z",
+     "iopub.status.busy": "2020-08-28T17:30:02.824999Z",
+     "iopub.status.idle": "2020-08-28T17:30:04.427372Z",
+     "shell.execute_reply": "2020-08-28T17:30:04.426846Z",
+     "shell.execute_reply.started": "2020-08-28T17:30:02.825176Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -215,22 +310,22 @@
       "************ rate law = CM **************\n",
       "\n",
       "initial Z-score = 0.00e+00\n",
-      "optimal Z-score = 3.83e+00\n",
+      "optimal Z-score = 4.69e-09\n",
       "\n",
       "Metabolite concentrations (M) =\n",
-      " [[2.00992716e-03 1.00118712e-02 2.00351499e-03 1.00000328e-03]\n",
-      " [2.00002026e-04 9.99562158e-05 2.99659113e-04 1.00001711e-04]\n",
-      " [9.99989354e-06 9.99990036e-06 1.00000319e-05 9.99985407e-06]]\n",
+      " [[2.00000018e-03 1.00000007e-02 2.00000018e-03 1.00000009e-03]\n",
+      " [2.00000018e-04 1.00000015e-04 3.00000019e-04 1.00000014e-04]\n",
+      " [9.99999951e-06 9.99999908e-06 9.99999966e-06 9.99999908e-06]]\n",
       "\n",
       "Enzyme concentrations (M) =\n",
-      " [[3.10071970e-04 8.23387935e-05 4.69400944e-04 5.21302867e-04]\n",
-      " [8.36266253e-04 1.46535816e-03 1.23370664e-03 2.44096372e-03]\n",
-      " [3.37382114e-03 8.95015208e-04 1.22389573e-03 3.10387430e-02]]\n",
+      " [[0.00160275 0.00022503 0.00263183 0.00262951]\n",
+      " [0.00030468 0.00108325 0.00044827 0.00054162]\n",
+      " [0.00060004 0.00055004 0.00021668 0.00220018]]\n",
       "\n",
       "Driving forces (RT) =\n",
-      " [[ 6.67669512  8.97596338  6.26918172  6.67174011]\n",
-      " [ 0.9555207   0.26192477  1.35982491  0.26238445]\n",
-      " [11.06665378 10.37305785 11.47095799 10.37351753]]\n",
+      " [[ 6.34565871  8.64824373  5.94019363  6.34565866]\n",
+      " [ 0.95554139  0.26239431  1.36100645  0.2623943 ]\n",
+      " [11.06665445 10.37350737 11.47211952 10.37350737]]\n",
       "\n",
       "η(thr) =\n",
       " [[1.   1.   1.   1.  ]\n",
@@ -238,14 +333,14 @@
       " [1.   1.   1.   1.  ]]\n",
       "\n",
       "η(kin) =\n",
-      " [[0.24 0.69 0.2  0.18]\n",
+      " [[0.06 0.33 0.05 0.05]\n",
       " [0.67 0.5  0.75 0.5 ]\n",
       " [0.17 0.09 0.23 0.09]]\n",
       "\n",
       "η(reg) =\n",
-      " [[1.   1.   1.   1.  ]\n",
-      " [0.36 0.74 0.36 0.22]\n",
-      " [0.18 0.61 0.18 0.07]]\n",
+      " [[1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]]\n",
       "\n",
       "\n",
       "\n",
@@ -254,19 +349,16 @@
       "--------------------------------------------------\n",
       "enzymes =  0.0\n",
       "metabolites =  0.0\n",
-      "Keq =  0.03\n",
-      "kcat forward =  0.16\n",
-      "kcat reverse =  0.14\n",
-      "Km =  0.35\n",
-      "Ka =  3.15\n",
+      "Keq =  0.0\n",
+      "kcat forward =  0.0\n",
+      "kcat reverse =  0.0\n",
+      "Km =  0.0\n",
+      "Ka =  0.0\n",
       "Ki =  0.0\n"
      ]
     }
    ],
    "source": [
-    "solver = \"SCS\"\n",
-    "#solver = \"ECOS\"\n",
-    "\n",
     "for rate_law in [\"CM\"]:#[\"S\", \"1S\", \"SP\", \"1SP\", \"CM\"]:\n",
     "    print(f\"************ rate law = {rate_law} **************\\n\")\n",
     "    args[\"conc_enz_gmean\"] = np.exp(\n",
@@ -278,16 +370,8 @@
     "\n",
     "    solve(\n",
     "        **args,\n",
-    "        solver=solver\n",
     "    )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
